# CellMESH

./: .gitignore  AVAILABILITY_IMPLEMENTATION.md  CELL_MESH_CODE_REVIEW_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  TASK_COMPLETE.md  pyproject.toml  smoke_test.py
cell_mesh/: __init__.py  core.py  database.py  preprocess.py
cell_mesh.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cell_mesh/data/: enzyme_test.csv  interaction_test.csv
cellmesh/: __init__.py  config.py  core.py  database.py  io.py  ploting.py  preprocess.py  score.py  scoring.py
docs/: ANNDATA_README.md  METHODS.md
examples/: cellmesh_comprehensive_walkthrough.ipynb  demo_HNSC_cellmesh_events_summary.csv  demo_HNSC_cellmesh_workflow.ipynb  example_availability.py  read_anndata_example.py  run_packaged_database_example.py  test_cellmesh_comprehensive.ipynb  test_metabolite_availability_cellmesh.ipynb
tests/: test_availability.py  test_cellmesh_comprehensive.py  test_database_and_api.py  test_median_contrast_scoring.py  test_metabolite_availability_complete.py
