[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellmesh"
version = "0.4.0"
description = "CELL MESH: Metabolite-mediated Event Scoring with Sensor Hierarchies"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "CELL MESH developers"}]
dependencies = ["numpy", "pandas"]

[project.optional-dependencies]
anndata = ["anndata", "scipy"]
dev = ["pytest", "anndata", "scipy", "scikit-learn"]

[tool.setuptools.packages.find]
include = ["cellmesh*"]

[tool.setuptools.package-data]
"cellmesh.data" = ["*.csv"]
