[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellmesh"
version = "0.4.0"
description = "CELL MESH: Metabolite-mediated Event Scoring with Sensor Hierarchies"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "CELL MESH developers"}]
dependencies = ["numpy", "pandas", "scipy", "anndata"]

[project.optional-dependencies]
scanpy = ["scanpy"]
notebook = ["matplotlib", "ipykernel", "notebook"]
dev = ["pytest", "matplotlib"]

[tool.setuptools.packages.find]
include = ["cellmesh*"]

[tool.setuptools.package-data]
"cellmesh.data" = ["*.csv", "*.h5ad"]
